Fixing Misaligned Block on video players

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -4,10 +4,12 @@
 
 .videoStream {
     width:100%;
+    display:block;
 }
 
 .recordedStream {
     width:100%;
+    display:block;
 }
 
 .streamInfo{
